# lazyfoo_stuff

./: CMakeLists.txt
lessons/: 02_getting_an_image_on_the_screen.cpp  06_extension_libraries_and_loading_other_image_formats.cpp  16_true_type_fonts.cpp  21_sound_effects_and_music.cpp  35_window_events.cpp
